# photo-memex

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: dsl.md  sql.md
docs/design/: file-as-truth.md
docs/plans/: 2026-02-28-ptk-refactor-design.md  2026-03-01-ptk-refactor-plan.md
photo_memex/: __init__.py  cli.py
photo_memex/core/: __init__.py  config.py  exif.py  hasher.py  thumbnails.py
photo_memex/db/: __init__.py  session.py
photo_memex/exports/: __init__.py  arkiv.py  html.py
photo_memex/importers/: __init__.py  apple_photos.py  arkiv.py  base.py  filesystem.py  google_takeout.py
photo_memex/mcp/: __init__.py  server.py
photo_memex/query/: __init__.py  executor.py
photo_memex/services/: __init__.py  import_service.py
ptk/: __init__.py  cli.py
ptk/ai/: __init__.py  annotations.py  anthropic_provider.py  ollama.py  openai_provider.py  provider.py
ptk/core/: __init__.py  config.py  constants.py  exceptions.py  exif.py  hasher.py  thumbnails.py
ptk/db/: __init__.py  models.py  session.py
ptk/exports/: __init__.py  arkiv.py  html.py
ptk/importers/: __init__.py  apple_photos.py  arkiv.py  base.py  filesystem.py  google_takeout.py
ptk/mcp/: __init__.py  server.py
ptk/query/: __init__.py  builder.py  executor.py
ptk/services/: __init__.py  import_service.py
ptk/skills/: __init__.py  installer.py
ptk/views/: __init__.py  evaluator.py  loader.py  manager.py  models.py  schema.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_claude_skill.py  test_cli.py  test_phase2.py  test_phase3.py
tests/unit/: __init__.py  test_annotations.py  test_apple_photos.py  test_arkiv_export.py  test_arkiv_import.py  test_config.py  test_fts.py  test_google_takeout.py  test_hasher.py  test_html_export.py  test_importers.py  test_library_config.py  test_marginalia.py  test_mcp_server.py  test_models.py  test_path_commands.py  test_provider.py  test_query.py  test_soft_delete.py  (+1 more)
(+6 files in other folders)
